--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
     "require": {
         "twig/twig": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    },
+    "autoload": {
+        "psr-4": {
+            "app\\" : ""
+        }
     }
 }
